--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -2063,8 +2063,8 @@
        (setopt ellama-language "English")
        (require 'llm-openai)
        (setopt ellama-provider
-               (make-llm-openai :key (plist-get (nth 0 (auth-source-search :app "openai" :max 1)) :api-key)
-                                :chat-model "gpt-4o-mini")))
+               (make-llm-gemini :key (plist-get (nth 0 (auth-source-search :app "gemini" :max 1)) :api-key)
+                                :chat-model "gemini-2.0-flash")))
    #+end_src
 ** Translate
    #+begin_src emacs-lisp
